--- a/components/card/index.html
+++ b/components/card/index.html
@@ -5,17 +5,40 @@
   <title>HTML/CSS Card component</title>
   <link rel="stylesheet" href="style.css">
 
-  <style>
-    .wrapper {
-      width: 400px;
-      margin: 100px auto;
-    }
-  </style>
 </head>
 <body>
 <main>
-  <div class="wrapper">
+  <div class="product-card">
     <!-- Card component -->
+    <div class="product-img">
+        <img src="./Rectangle.jpg" alt="product-img">
+    </div>
+      <div class="product-content">
+        <div class="product-price-wrapper">
+          <div class="product-rating">
+           <span>1.23</span>
+           <div class="=product-star">
+            <svg width="14" height="12" viewBox="0 0 14 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M7 0.940965L8.8394 3.87345L8.95364 4.05557L9.16441 4.09795L12.6648 4.80181L10.3013 7.25805L10.1392 7.42652L10.1645 7.65893L10.5264 10.9777L7.18936 9.61224L7 9.53476L6.81064 9.61224L3.47361 10.9777L3.83549 7.65893L3.86083 7.42652L3.69872 7.25805L1.3352 4.80181L4.83559 4.09795L5.04636 4.05557L5.1606 3.87345L7 0.940965Z" stroke="white"/>
+              </svg>
+           </div>
+          </div>
+          <div class="product-price">15999
+        </div>
+        </div>
+          <h5 class="product-name">
+            Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black
+          </h5>
+          <p class="product-category">laptops
+          </p>
+          </div>
+
+            <footer class="button-add">
+             <button class="button-add-cart">
+              ADD TO CART
+             </button>
+              </footer>
+    </div>
   </div>
 </main>
 </body>
