--- a/components/pagination/index.html
+++ b/components/pagination/index.html
@@ -1,23 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <title>HTML/CSS Pagination component</title>
-  <link rel="stylesheet" href="style.css">
-
-  <style>
-    .wrapper {
-      margin: 100px auto;
-    }
-  </style>
-</head>
-<body>
-
-<main>
-  <div class="wrapper">
-    <!-- Pagination component -->
-  </div>
-</main>
-
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <title> Pagination component</title>
+    <link rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css"
+    />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <main class="outside">
+      <div class="flip">
+      <div class="page-flip">
+        <i class="bi bi-chevron-left"></i>
+        </div>
+        <div class="pages">
+        <div class="page active">1</div>
+        <div class="page">2</div>
+        <div class="page">3</div>
+        <div class="page">4</div>
+        <div class="page">5</div>
+        <div class="page">6</div>
+        <div class="page">7</div>
+        <div class="page">8</div>
+        <div class="page">9</div>
+        <div class="page">10</div>
+        <div class="page">11</div>
+        <div class="page">12</div>
+      </div>
+      <div class="page-flip">
+        <i class="bi bi-chevron-right"></i>
+      </div>
+      </div>
+    </main>
+  </body>
 </html>
