--- a/components/card/index.html
+++ b/components/card/index.html
@@ -1,22 +1,68 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <title>HTML/CSS Card component</title>
-  <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8">
+    <meta
+      name="viewport"
+      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+    >
+    <title>Product cards</title>
+    <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+    >
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+    >
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    >
+    <link
+      rel="stylesheet"
+      href="../styles/main.css"
+    >
+  </head>
+  <body>
+    <div class="product-card">
 
-  <style>
-    .wrapper {
-      width: 400px;
-      margin: 100px auto;
-    }
-  </style>
-</head>
-<body>
-<main>
-  <div class="wrapper">
-    <!-- Card component -->
-  </div>
-</main>
-</body>
+      <img
+        class="product-card__image"
+        src="../img/Acer-Aspire-3 (A315-57G-336G)).jpg"
+        alt="Acer-Aspire-3 (A315-57G-336G)"
+      >
+
+      <div class="product-card__ranking-container">
+        <div class="product-card__ranking">
+          <p class="product-card__ranking-marks">1.23</p>
+          <div class="product-card__star"></div>
+        </div>
+        <div class="product-card__price">
+          15999
+        </div>
+      </div>
+
+      <p class="product-card__description-text">
+        Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black
+      </p>
+
+      <div class="product-card__code-container">
+        <p class="product-card__code-text">
+          laptops
+        </p>
+      </div>
+
+      <button class="product-card__button-container">
+        <a
+          href="#"
+          class="product-card__button-buy"
+        >
+          Add to cart
+        </a>
+    </div>
+
+    </button>
+
+  </body>
 </html>
