--- a/components/pagination/index.html
+++ b/components/pagination/index.html
@@ -1,23 +1,56 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <title>HTML/CSS Pagination component</title>
-  <link rel="stylesheet" href="style.css">
-
-  <style>
-    .wrapper {
-      margin: 100px auto;
-    }
-  </style>
-</head>
+  <head>
+    <meta charset="UTF-8">
+    <meta
+      name="viewport"
+      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+    >
+    <title>Product cards</title>
+    <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+    >
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+    >
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    >
+    <link
+      rel="stylesheet"
+      href="../styles/main.css"
+    >
+  </head>
 <body>
+  <div class="pagination">
+    <div class="
+    pagination__select
+    pagination__select-arrow
+    pagination__select-arrow_left"
+ ></div>
 
-<main>
-  <div class="wrapper">
-    <!-- Pagination component -->
+    <div class="pagination__select-container">
+      <div class="pagination__select">1</div>
+      <div class="pagination__select">2</div>
+      <div class="pagination__select">3</div>
+      <div class="pagination__select">4</div>
+      <div class="pagination__select">5</div>
+      <div class="pagination__select">6</div>
+      <div class="pagination__select">7</div>
+      <div class="pagination__select">8</div>
+      <div class="pagination__select">9</div>
+      <div class="pagination__select">10</div>
+      <div class="pagination__select">11</div>
+      <div class="pagination__select">12</div>
+    </div>
+
+    <div class="
+    pagination__select
+    pagination__select-arrow
+    pagination__select-arrow_right"
+    ></div>
   </div>
-</main>
-
 </body>
-</html>
