--- a/components/grid/media-query-grid.html
+++ b/components/grid/media-query-grid.html
@@ -30,6 +30,9 @@
     }
 
     .col-2 {
+      width: calc(100% / 3 );
+    }
+    .col-2-left {
       width: calc(100% / 12 * 2);
     }
 
@@ -73,48 +76,65 @@
       width: calc(100% / 12 * 12);
       min-width: 200px;
     }
-
-    /* s */
+    /* u */
     @media (max-width: 576px) {
       .col-s-3 {
         width: calc(100% / 12 * 3);
         display: none;
       }
+      .col-s-9 {
+        width: calc(100% / 12 * 9);
+        display: flex;
+        flex-wrap: wrap;
+      }
+    /* s */
+    @media (min-width: 576px) {
+      .col-s-3 {
+        width: calc(100% / 12 * 3);
+      }
 
       .col-s-9 {
         width: calc(100% / 12 * 9);
+        display: flex;
+        flex-wrap: wrap;
       }
     }
 
     /* m */
-    @media (max-width: 768px) {
+    @media (min-width: 768px) {
       .col-m-5 {
         width: calc(100% / 12 * 5);
       }
       .col-m-7 {
         width: calc(100% / 12 * 7);
+        display: flex;
+        flex-wrap: wrap;
       }
     }
 
     /* l */
-    @media (max-width: 992px) {
+    @media (min-width: 992px) {
       .col-l-4 {
         width: calc(100% / 12 * 4);
       }
 
       .col-l-8 {
         width: calc(100% / 12 * 8);
+        display: flex;
+        flex-wrap: wrap;
       }
     }
 
     /* xl */
-    @media (max-width: 1200px) {
+    @media (min-width: 1200px) {
       .col-xl-2 {
         width: calc(100% / 12 * 2);
       }
 
       .col-xl-10 {
         width: calc(100% / 12 * 10);
+        display: flex;
+        flex-wrap: wrap;
       }
     }
   </style>
@@ -123,35 +143,35 @@
   <main>
     <div class="container">
       <div class="row">
-        <div class="col-2 col-s-3 col-m-5 col-l-4 col-xl-2">
-          col #1
+        <div class="col-2-left col-s-3 col-m-5 col-l-4 col-xl-2">
+          col 1
         </div>
         <div class="col-10 col-s-9 col-m-7 col-l-8 col-xl-10">
-          <div class="col-12">
+          <div class="col-2">
             1
           </div>
-          <div class="col-12">
+          <div class="col-2">
             2
           </div>
-          <div class="col-12">
+          <div class="col-2">
             3
           </div>
-          <div class="col-12">
+          <div class="col-2">
             4
           </div>
-          <div class="col-12">
+          <div class="col-2">
             5
           </div>
-          <div class="col-12">
+          <div class="col-2">
             6
           </div>
-          <div class="col-12">
+          <div class="col-2">
             7
           </div>
-          <div class="col-12">
+          <div class="col-2">
             8
           </div>
-          <div class="col-12">
+          <div class="col-2">
             9
           </div>
         </div>
