--- a/components/card/index.html
+++ b/components/card/index.html
@@ -4,35 +4,51 @@
   <meta charset="UTF-8" />
   <title>HTML/CSS Card component</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet">
 
   <style>
     .wrapper {
       width: 400px;
-      margin: 100px auto;
+      margin: auto;
+
     }
   </style>
 </head>
 <body>
-<main>
+
   <div class="wrapper">
     <!-- Card component -->
-  <div class="product-card"
-  <div class="image"
-  <a href="#"> <img src="Images/Image.jpg" alt="Фото"></a>
+    <div class="block-image">
+  <img  src="Images/Image.jpg" class="image" alt="Фото">
+</div>
 
-  </div>
+
+
+
   <div class="product-info">
-  <div class="rate">1.23
-    <i class="bi bi-star"></i>
+  <div class="rate">1.23 &#160;
+    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-star" viewBox="0 0 16 16">
+    <path d="M2.866 14.85c-.078.444.36.791.746.593l4.39-2.256 4.389 2.256c.386.198.824-.149.746-.592l-.83-4.73 3.522-3.356c.33-.314.16-.888-.282-.95l-4.898-.696L8.465.792a.513.513 0 0 0-.927 0L5.354 5.12l-4.898.696c-.441.062-.612.636-.283.95l3.523 3.356-.83 4.73zm4.905-2.767-3.686 1.894.694-3.957a.565.565 0 0 0-.163-.505L1.71 6.745l4.052-.576a.525.525 0 0 0 .393-.288L8 2.223l1.847 3.658a.525.525 0 0 0 .393.288l4.052.575-2.906 2.77a.565.565 0 0 0-.163.506l.694 3.957-3.686-1.894a.503.503 0 0 0-.461 0z"/>
+    </svg>
   </div>
     <div class="price">15999
   </div>
   </div>
 
-  <p class="discription"> Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black</p>
+  <p> Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black</p>
+  <p2>laptops</p2>
+<div class="add-to-cart">
+  <button>ADD TO CART</button>
+</div>
+</div>
 </div>
 
+</main>
 
+</div>
   </div>
 </div>
 </main>
