--- a/components/card/style.css
+++ b/components/card/style.css
@@ -1,35 +1,23 @@
 
-.body {
-  font-family:
-  font-size: 20px;
-}
 
 
 .wrapper {
-  border: 1px solid black;
-  border-radius: 5px;
-
-
-
-
-}
-
-.product-card {
-  display: flex;
-  margin: auto;
-  width: 100%;
-  height: 15rem;
-  justify-content: center;
-  margin-top: 20px;
-
-
+font-family: 'Montserrat', sans-serif;
+border-radius: 10px;
+padding-top: 20px;
+box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 
 }
+
 
 .image {
+  width: 90%;
+  margin-left: 20px;
 
+}
 
-
+.block-image {
+  margin: 10px;
 
 }
 
@@ -37,36 +25,35 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  padding-left: 40px;
-  margin-top: 30px;
+  margin-left: 30px;
+  margin-right: 30px;
 
-}
-
-.bi bi-star {
-  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-star" viewBox="0 0 16 16">
-  <path d="M2.866 14.85c-.078.444.36.791.746.593l4.39-2.256 4.389 2.256c.386.198.824-.149.746-.592l-.83-4.73 3.522-3.356c.33-.314.16-.888-.282-.95l-4.898-.696L8.465.792a.513.513 0 0 0-.927 0L5.354 5.12l-4.898.696c-.441.062-.612.636-.283.95l3.523 3.356-.83 4.73zm4.905-2.767-3.686 1.894.694-3.957a.565.565 0 0 0-.163-.505L1.71 6.745l4.052-.576a.525.525 0 0 0 .393-.288L8 2.223l1.847 3.658a.525.525 0 0 0 .393.288l4.052.575-2.906 2.77a.565.565 0 0 0-.163.506l.694 3.957-3.686-1.894a.503.503 0 0 0-.461 0z"/>
-</svg>
 }
 
 .rate {
-  background:#7E72F2;
-  ;
-  border-radius: 10%;
-  display: flex;
-  padding: 6px 20px;
+  background: #7E72F2;
+  padding: 5px;
+  border-radius: 5px;
+  color: white;
 
 }
 
-.price {
-  display: flex;
-  padding-right: 40px;
+p,p2 {
 
+margin-left: 30px;
+
+}
+
+button {
+  width: 100%;
+  background: #7E72F2;
+  margin-top: 20px;
+  height: 50px;
+  color: white;
+  font-family: 'Montserrat', sans-serif;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
 
 }
 
-.discription {
-margin-bottom: 8px;
 
-
-
-}
