--- a/src/components/card/01-css-task/index.html
+++ b/src/components/card/01-css-task/index.html
@@ -1,22 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>Card component</title>
-  <link rel="stylesheet" href="style.css">
-
-  <style>
-    .wrapper {
-      width: 400px;
-      margin: 100px auto;
-    }
-  </style>
+  <meta charset="UTF-8">
+  <title>Document</title>
+  <link rel="stylesheet" href="./styls/styl.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel="stylesheet">
 </head>
 <body>
-<main>
-  <div class="wrapper">
-    <!-- Card component -->
+<div class="blok-rama">
+  <div class="blok-img"><img class="otstup" src="./img/nout.png" alt=""></div>
+
+  <div class="blok-zv-cn">
+    <div class="blok-zvezda">
+      <div class="corect1">1.23</div>
+      <div class="corect1"><i class="bi bi-star"></i></div>
+
+    </div>
+    <div class="blok-cena">15999</div>
   </div>
-</main>
+
+  <div class="blok-naz">
+    <div class="corect3">Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black</div>
+  </div>
+
+  <div class="typ">
+    <div class="corect4">laptops</div>
+  </div>
+
+  <div class="blok-add knop">
+    <div class="corect5">Add To Cart</div>
+  </div>
+</div>
 </body>
 </html>
