--- a/src/components/card/01-css-task/style.css
+++ b/src/components/card/01-css-task/style.css
@@ -1,1 +1,99 @@
-/* put your styles in this file */
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap');
+
+:root{
+  --purple-100: #7E72F2;
+  --purple-200: #6F61F2;
+  --white: #FFFFFF;
+  --main-text-color: #2c2c2c;
+}
+
+html,
+body {
+  height: 100%;
+  margin: 0;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  margin: 0;
+  padding: 0;
+}
+
+.wrapper{
+  margin: 100px auto;
+  width: 317px;
+  height: 394px;
+}
+
+.product-card {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 600;
+  background: var(--white);
+  box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.133);
+  border-radius: 8px;
+}
+
+.product-img {
+  padding: 12px 12px 0px 12px ;
+}
+
+.product-content{
+  padding: 22px 24px;
+}
+
+.product-price-wrapper{
+  margin-bottom: 16px;
+}
+
+.product-price-wrapper, .product-rating {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.product-rating {
+  max-width: 70px;
+  padding: 6px 12px;
+  border-radius: 3px;
+  background: var(--purple-100);
+  font-size: 13px;
+  color: var(--white);
+  flex: 1;
+  box-sizing: border-box;
+}
+
+.product-price {
+  color: var(--main-text-color);
+  font-size: 18px;
+}
+
+.product-title{
+  margin-bottom: 8px;
+  font-size: 16px;
+  color: var(--main-text-color);
+  box-sizing: border-box;
+  margin-top: 0px;
+}
+
+.product-description{
+  font-size: 12px;
+  font-weight: 900;
+  color: var(--main-text-color);
+  margin: 0px;
+}
+
+.product-footer button{
+  color: var(--white);
+  text-transform: uppercase;
+  background: var(--purple-100);
+  width: 100%;
+  padding: 13px 0px;
+  border: none;
+  cursor: pointer;
+  transition: .3s;
+  border-bottom-left-radius: 8px;
+  border-bottom-right-radius: 8px;
+}
+
+.product-footer button:hover{
+  background-color: var(--purple-200);
+}
