--- a/src/components/pagination/01-css-task/index.html
+++ b/src/components/pagination/01-css-task/index.html
@@ -2,21 +2,65 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Pagination component</title>
+  <title>HTML/CSS Pagination component</title>
   <link rel="stylesheet" href="style.css">
-
-  <style>
-    .wrapper {
-      width: 800px;
-      margin: 100px auto;
-    }
-  </style>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 </head>
+
 <body>
 <main>
   <div class="wrapper">
-    <!-- Pagination component -->
+    <nav class="pagination">
+      <a href="#" class="page-link left" data-element="nav-left">
+        <i class="bi bi-chevron-left"></i>
+      </a>
+
+      <ul class="page-list">
+        <li>
+          <a href="#" data-element="page-link" class="page-link active" data-page-index="0">1</a>
+        </li>
+        <li>
+          <a href="#" data-element="page-link" class="page-link" data-page-index="1">2</a>
+        </li>
+        <li>
+          <a href="#" data-element="page-link" class="page-link" data-page-index="2">3</a>
+        </li>
+        <li>
+          <a href="#" data-element="page-link" class="page-link" data-page-index="3">4</a>
+        </li>
+        <li>
+          <a href="#" data-element="page-link" class="page-link" data-page-index="4">5</a>
+        </li>
+        <li>
+          <a href="#" data-element="page-link" class="page-link" data-page-index="5">6</a>
+        </li>
+        <li>
+          <a href="#" data-element="page-link" class="page-link" data-page-index="6">7</a>
+        </li>
+        <li>
+          <a href="#" data-element="page-link" class="page-link" data-page-index="7">8</a>
+        </li>
+        <li>
+          <a href="#" data-element="page-link" class="page-link" data-page-index="8">9</a>
+        </li>
+        <li>
+          <a href="#" data-element="page-link" class="page-link" data-page-index="9">10</a>
+        </li>
+        <li>
+          <a href="#" data-element="page-link" class="page-link" data-page-index="10">11</a>
+        </li>
+        <li>
+          <a href="#" data-element="page-link" class="page-link" data-page-index="11">12</a>
+        </li>
+      </ul>
+
+      <a href="#" class="page-link right" data-element="nav-right">
+        <i class="bi bi-chevron-right"></i>
+      </a>
+
+    </nav>
   </div>
 </main>
+
 </body>
 </html>
