--- a/src/components/pagination/01-css-task/style.css
+++ b/src/components/pagination/01-css-task/style.css
@@ -1,3 +1,38 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css");
 
-/* put your styles in this file */
+* {
+  font-family: 'Montserrat', sans-serif;
+}
+
+.wrapper {
+  margin: 100px auto;
+}
+
+.wrapper-pagination {
+  display: flex;
+}
+
+.btn-back {
+  margin-right: 15px;
+}
+
+.btn-forward {
+  margin-left: 15px;
+}
+
+.btn-button-class {
+  width: 40px;
+  height: 40px;
+  font-size: 12px;
+  line-height: 9px;
+  background: #EDEDED;
+  border: none;
+  border-radius: 50%;
+  box-sizing: border-box;
+  cursor: pointer;
+}
+
+.btn-button-class:hover {
+  background: #7E72F2;
+  color: #FFFFFF;
+}
