--- a/src/components/pagination/01-css-task/index.html
+++ b/src/components/pagination/01-css-task/index.html
@@ -3,19 +3,30 @@
 <head>
   <meta charset="UTF-8" />
   <title>Pagination component</title>
+  <link rel="stylesheet" href="../../../styles/reset.css">
   <link rel="stylesheet" href="style.css">
-
-  <style>
-    .wrapper {
-      width: 800px;
-      margin: 100px auto;
-    }
-  </style>
 </head>
 <body>
 <main>
   <div class="wrapper">
-    <!-- Pagination component -->
+    <section class="pagination">
+      <div class="btn-prev"> <a href="#"> <i class="bi bi-chevron-left"></i></a></div>
+      <ul>
+        <li><a href="#">1</a></li>
+        <li><a href="#">2</a></li>
+        <li><a href="#">3</a></li>
+        <li><a href="#">4</a></li>
+        <li><a href="#">5</a></li>
+        <li><a href="#">6</a></li>
+        <li><a href="#">4</a></li>
+        <li><a href="#">8</a></li>
+        <li><a href="#">9</a></li>
+        <li><a href="#">10</a></li>
+        <li><a href="#">11</a></li>
+        <li><a href="#">12</a></li>
+      </ul>
+      <div class="btn-next"> <a href="#"><i class="bi bi-chevron-right"></i></a> </div>
+    </section>
   </div>
 </main>
 </body>
