--- a/components/pagination/index.html
+++ b/components/pagination/index.html
@@ -3,34 +3,25 @@
 <head>
   <meta charset="UTF-8" />
   <title>HTML/CSS Card component</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
   <link rel="stylesheet" href="style.css">
 
 </head>
 <body>
-<main>
-  <div class="wrapper">
-    <!-- Pagination component -->
-    <div class="pagination-component">
-      <div class="round-btn left-arrow-btn">
-        <img src="../../images/arrow-icon.svg" alt="arrow-icon">
-      </div>
-      <div class="round-btn active">
-        <span>1</span>
-      </div>
-      <div class="round-btn">
-        <span>2</span>
-      </div>
-      <div class="round-btn">
-        <span>3</span>
-      </div>
-      <div class="round-btn">
-        <span>4</span>
-      </div>
-      <div class="round-btn right-arrow-btn">
-        <img class="arrow-right" src="../../images/arrow-icon.svg" alt="arrow-icon">
-      </div>
-    </div>
-  </div>
-</main>
+    <nav class="pagination">
+      <a href="#" class="page-link previous">
+        <i class="bi bi-chevron-left"></i>
+      </a>
+      <ul class="page-list">
+        <li><a href="#" class="page-link active">1</a></li>
+        <li><a href="#" class="page-link">2</a></li>
+        <li><a href="#" class="page-link">3</a></li>
+        <li><a href="#" class="page-link">4</a></li>
+        <li><a href="#" class="page-link">5</a></li>
+      </ul>
+      <a href="#" class="page-link next">
+        <i class="bi bi-chevron-right"></i>
+      </a>
+
 </body>
 </html>
