--- a/components/pagination/style.css
+++ b/components/pagination/style.css
@@ -2,43 +2,48 @@ body div {
   box-sizing: border-box;
 }
 
-.pagination-component {
+.pagination {
   display: flex;
+  align-items: center;
 }
-
-.round-btn {
+.pagination .page-list {
+  border-radius: 20px;
+  display: flex;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+.pagination .page-link {
   width: 40px;
   height: 40px;
   background: #EDEDED;
-  border-radius: 50%;
+  border-radius: 20px;
   display: flex;
   justify-content: center;
   align-items: center;
+
+}
+.pagination a {
+ text-decoration: none;
 }
 
-.round-btn.active {
+.pagination .active {
   background: #7E72F2;
   color: #ffffff;
 }
 
-.round-btn:hover {
-  border: 2px solid #7E72F2;
+.pagination .page-link:hover {
+  background-color: #7E72F2;
   cursor: pointer;
+  transition: 2s;
+
 }
 
-.round-btn:first-child {
+.pagination .previous {
   margin-right: 15px;
 }
 
-.round-btn:last-child {
+.pagination .next {
   margin-left: 15px;
 }
 
-.round-btn img {
-  width: 7px;
-  height: 13px;
-}
-
-.arrow-right {
-  transform: rotate(180deg);
-}
