--- a/src/components/filters-list/01-css-task/index.html
+++ b/src/components/filters-list/01-css-task/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8" />
   <title>FiltersList component</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&family=Roboto:wght@100;300&display=swap">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
 
   <style>
     .wrapper {
@@ -16,6 +18,42 @@
 <main>
   <div class="wrapper">
     <!-- FiltersList component -->
+
+    <div class="side-bar-section">
+      <h3 class="side-bar-heading">Category</h3>
+      <div class="side-bar-filters">
+        <input type="checkbox" class="checked">
+        <label for="checkbox">Monitors</label>
+      </div>
+      <div class="side-bar-filters">
+        <input type="checkbox">
+        <label for="checkbox">Laptops</label>
+      </div>
+      <div class="side-bar-filters">
+        <input type="checkbox">
+        <label for="checkbox">Video cards</label>
+      </div>
+      <div class="side-bar-filters">
+        <input type="checkbox">
+        <label for="checkbox">Gaming keyboards</label>
+      </div>
+      <div class="side-bar-filters">
+        <input type="checkbox">
+        <label for="checkbox">Computer mouse</label>
+      </div>
+      <div class="side-bar-filters">
+        <input type="checkbox">
+        <label for="checkbox">SSD</label>
+      </div>
+      <div class="side-bar-filters">
+        <input type="checkbox">
+        <label for="checkbox">Sound cards</label>
+      </div>
+      <div class="side-bar-filters">
+        <input type="checkbox">
+        <label for="checkbox">RAM</label>
+      </div>
+    </div>
   </div>
 </main>
 </body>
