--- a/src/components/filters-list/01-css-task/style.css
+++ b/src/components/filters-list/01-css-task/style.css
@@ -1,1 +1,55 @@
 /* put your styles in this file */
+
+
+
+:root {
+  --white: #FFFFFF;
+  --purple: #7E72F2;
+  --black: #000000;
+  --gray-200: #979797;
+  --gray-100: #D6D6D6;
+}
+
+.side-bar-section {
+  box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.133);
+  border-radius: 8px;
+  padding: 20px;
+}
+
+.side-bar-heading {
+  font-family: 'Montserrat', sans-serif;
+
+}
+
+.side-bar-filters {
+  display: flex;
+  align-items: center;
+  font-family: 'Montserrat', sans-serif;
+  margin-top: 5px;
+}
+
+.side-bar-filters input{
+  appearance: none;
+  width: 20px;
+  height: 17px;
+  border: 1px solid var(--gray-200);
+  border-radius: 3px;
+  display: flex;
+  justify-content: center;
+  cursor: pointer;
+  margin-right: 10px
+}
+
+.side-bar-filters label {
+  cursor: pointer;
+}
+
+.side-bar-filters input:checked {
+  background-color: var(--purple);
+  border-color: var(--purple);
+}
+
+.side-bar-filters input:checked::after {
+  content: "✓";
+  color: var(--white);
+}
